--- a/assets/css/service-style.scss
+++ b/assets/css/service-style.scss
@@ -1,7 +1,7 @@
 #services {
     background-color: #000;
     .main {
-        row-gap: 31.2rem;
+        row-gap: 37.5rem;
     }
 }
 .main {
@@ -23,7 +23,7 @@
             }
         }
         &:nth-child(2) {
-            margin-top: 31.2rem;
+            margin-top: 37.5rem;
         }
     }
     &__services.active {
@@ -35,7 +35,7 @@
         }
     }
     &__services#website {
-        padding-bottom: 15.6rem;
+        padding-bottom: 37.5rem;
     }
     .bg-cover-service {
         position: fixed;
